# squishfile

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  squishfile.spec
.claude/: settings.local.json
.github/workflows/: release.yml
docs/plans/: 2026-02-06-squishfile-design.md  2026-02-06-squishfile-implementation.md  2026-02-06-ui-redesign.md  2026-02-06-video-audio-compression-design.md  2026-02-06-video-audio-implementation-plan.md  2026-02-09-distribution-design.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CompressPage.tsx  DownloadPage.tsx  DropZone.tsx  FileCard.tsx  Pipeline.tsx  SizeControl.tsx  Stepper.tsx  UploadPage.tsx
frontend/src/styles/: theme.ts
scripts/: train_model.py
squishfile/: __init__.py  cli.py  detector.py  main.py
squishfile/compressor/: audio.py  engine.py  ffmpeg_utils.py  image.py  pdf.py  predictor.py  video.py
squishfile/models/: quality_model.pkl
squishfile/routes/: compress.py  upload.py
tests/: test_audio_compressor.py  test_compress_api.py  test_detector.py  test_engine.py  test_ffmpeg_utils.py  test_image_compressor.py  test_integration.py  test_main.py  test_pdf_compressor.py  test_predictor.py  test_upload.py  test_video_compressor.py
